--- a/post.hbs
+++ b/post.hbs
@@ -55,13 +55,11 @@
                         <span class="hidden">Google+</span>
                     </a>
                 </section>
-
                 <section class="comment">
-                    <div class="g-comments" data-href="{{@blog.url}}{{url}}" data-first_party_property="BLOGGER" data-view_type="FILTERED_POSTMOD">Loading Google+ Comments ...</div>
-                    <script async type="text/javascript" src="//apis.google.com/js/plusone.js?callback=gpcb"></script>
-                    <noscript>Please enable JavaScript to view the <a href="https://plus.google.com/">comments powered by Google+.</a></noscript>
+                        <div class="g-comments" data-href="{{@blog.url}}{{url}}" data-first_party_property="BLOGGER" data-view_type="FILTERED_POSTMOD">Loading Google+ Comments ...</div>
+                        <script async type="text/javascript" src="//apis.google.com/js/plusone.js?callback=gpcb"></script>
+                        <noscript> Please enable Javascript to view the <a href="https://plus.google.com/">Comments powered by Google+.</a></noscript>
                 </section>
-
             </footer>
 
         {{/post}}
